# reclaude

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  reclaude.py
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  pypi-publish.yml
src/reclaude/: __init__.py  __main__.py  core.py  tui.py
tests/: test_conventions.py  test_reclaude.py
