[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reclaude"
version = "0.1.0"
description = "Curses picker for resuming Claude Code sessions"
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-2-Clause"
license-files = ["LICENSE"]
authors = [{ name = "Bryce Boe", email = "bbzbryce@gmail.com" }]
keywords = ["claude", "claude-code", "curses", "tui", "resume"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/bboe/reclaude"
Repository = "https://github.com/bboe/reclaude"
Issues = "https://github.com/bboe/reclaude/issues"

[project.scripts]
reclaude = "reclaude:main"

[tool.hatch.build.targets.wheel]
packages = ["src/reclaude"]

[dependency-groups]
dev = ["pytest"]

[tool.pytest.ini_options]
pythonpath = ["src"]
