[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = ["pytest"]

[project]
authors = [{ email = "bbzbryce@gmail.com", name = "Bryce Boe" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities",
]
description = "Curses picker for resuming Claude Code sessions"
keywords = ["claude", "claude-code", "curses", "resume", "tui"]
license = "BSD-2-Clause"
license-files = ["LICENSE"]
name = "reclaude"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"

[project.scripts]
reclaude = "reclaude:main"

[project.urls]
Homepage = "https://github.com/bboe/reclaude"
Issues = "https://github.com/bboe/reclaude/issues"
Repository = "https://github.com/bboe/reclaude"

[tool.hatch.build.targets.wheel]
packages = ["src/reclaude"]

[tool.pytest.ini_options]
pythonpath = ["src"]
