[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = ["pre-commit", "pytest", "pyyaml"]

[project]
authors = [{ email = "bbzbryce@gmail.com", name = "Bryce Boe" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities",
]
description = "Curses picker for resuming Claude Code sessions"
keywords = ["claude", "claude-code", "curses", "resume", "tui"]
license = "BSD-2-Clause"
license-files = ["LICENSE"]
name = "reclaude"
readme = "README.md"
requires-python = ">=3.10"
version = "0.4.0"

[project.scripts]
reclaude = "reclaude:main"

[project.urls]
Homepage = "https://github.com/bboe/reclaude"
Issues = "https://github.com/bboe/reclaude/issues"
Repository = "https://github.com/bboe/reclaude"

[tool.hatch.build.targets.wheel]
packages = ["src/reclaude"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
preview = true

[tool.ruff.lint]
ignore = [
    "COM812", # formatter-incompatible per ruff's own guidance
    "CPY001", # LICENSE carries the copyright; no per-file headers
    "D203",   # one-blank-line-before-class conflicts with D211
    "D213",   # multi-line-summary-second-line conflicts with D212
    "ISC001", # formatter-incompatible per ruff's own guidance
]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "D1",      # tests are named, not documented
    "INP001",  # tests/ is intentionally not a package
    "PLR2004", # literal timestamps/pids/indexes are the fixtures
    "S101",    # assert is pytest's assertion mechanism
]
